# chip8-emulator

./: CMakeLists.txt  Chip8.cpp  Chip8.hpp  README.md
src/: Chip8.cpp  Chip8.hpp  main.cpp
